--- a/app/src/main/res/layout/activity_practical_test01_var03_main.xml
+++ b/app/src/main/res/layout/activity_practical_test01_var03_main.xml
@@ -8,8 +8,10 @@
     android:orientation="vertical">
 
     <EditText
+        android:id="@+id/first_field"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:saveEnabled="false"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,11 +21,13 @@
         android:gravity="center">
 
         <Button
+            android:id="@+id/plus_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
             android:gravity="center"/>
         <Button
+            android:id="@+id/minus_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="-"
@@ -33,15 +37,19 @@
     </LinearLayout>
 
     <EditText
+        android:id="@+id/second_field"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:saveEnabled="false"/>
     <TextView
+        android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Result"/>
 
     <Button
+        android:id="@+id/next_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NAVIGATE TO SECOND ACTIVITY"
